prevent SWiggle from embedded videos on mobile

--- a/drupal/sites/all/themes/fresh/sass/fresh.scss
+++ b/drupal/sites/all/themes/fresh/sass/fresh.scss
@@ -129,6 +129,12 @@ blockquote.pullquote {
 .inline-html-wrapper {
   display: block;
   margin: 0 auto;
+  .jwplayer {
+    overflow: hidden;
+    @include breakpoint($breakpoint-phablet) {
+      overflow: visible;
+    }
+  }
 }
 
 .align-center {
